--- a/htmls/typing.html
+++ b/htmls/typing.html
@@ -43,8 +43,8 @@
 </head>
 <body class="bg-gradient-to-br from-rose-100 via-purple-100 to-sky-100 flex items-center justify-center min-h-screen">
 
-    <div class="container mx-auto p-4 md:p-8 max-w-4xl w-full">
-        <div class="bg-white/80 backdrop-blur-sm rounded-2xl shadow-lg p-6 md:p-10">
+    <div class="w-full px-4 md:px-8">
+        <div class="bg-white/80 backdrop-blur-sm rounded-2xl shadow-lg p-6 md:p-10 max-w-none">
             <header class="text-center mb-8">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800">한올 정보 타자 연습</h1>
                 <p class="text-slate-500 mt-2">중학교 정보 교과 내용으로 타자 실력을 향상시켜 보세요.</p>
